# digitaldash

./: .bandit.yml  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  =2.0.0  Dockerfile  Makefile  Pipfile  README  README.md  README.rst  Serial.py  __init__.py  _version.py  auth.json  auth.txt  config.json  constants.json  doc.md  example.html  k_e_app.conf  ke.db  ke_app.pl  ke_protocol.py  libdigitaldash.dylib  main.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg  snowpack.config.cjs  snowpack.config.js  svelte.config.cjs  svelte.config.js  test.py
digital_dash_gui/: ke_protocol.py  main.py  test.py
digitaldash/: alert.py  alerts.py  base.py  clock.py  custom.py  digitaldash.py  dynamic.py  face.py  gauge.py  keError.py  keLabel.py  keProtocol.py  ke_label.py  ke_lable.py  massager.py  pid.py  rally.py  test.py
docs/: README.md
etc/: Config.json  Config.py  Old_Config.json  config.json  config.py
frontend/: .env  Pipfile  ke.db  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.ts
kv/: alert.kv  background.kv
lib/: KE.py  KEApp.pm  alert.py  alerts.py  base.py  digitaldash.py  dynamic.py  face.py  gauge.py  ke_label.py  pid.py
libdigitaldash/: Cargo.toml  setup.py
public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  index.html
rust/: Cargo.toml  Makefile
sbin/: .run.py.swp  Serial.py  Serial.py.save  digitaldash.kv  run.py
script/: KEApp
scripts/: Alert.py
src/: app.css  app.html  globals.d.ts
static/: Constants.py  constants.json  (+1 more)
(+366 files in other folders)
