[tool.poetry]
name = "digital-dash-gui"
version = "0.1.0"
description = ""
authors = ["craig kaiser <craig@kaiserengineering.io>"]

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^0.10.2"
pgen = "^0.2.1"
kivy = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dd = "digital_dash_gui.main:run"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

